--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
          <pre class="tab">Scroll down to explor more about us </pre>
        </div>
    </section>
+   <!-- this is section four -->
+   <section class="four">
+     <div class="half-four">
+       <h1>Should be creative</h1>
+        <P>In the world of the web, designers are most thought of as the creatives, whilst developers are seen more as technical problem solvers and troubleshooters. There is truth to this of course, but it’s not as black-and-white as it may seem. In fact, whilst much of the visual creative tasks fall into the lap of a designer, web development can be a highly creative, intuitive profession too.</p>
+      
+       <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Read the Documentation
+        </a>
+      </div><img src="images/pictures/new.jpg" alt=""> </div>
+   </section>
     
 </body>
 </html>
