--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         </a>
       </div><img src="images/pictures/new.jpg" alt=""> </div>
    </section>
-    
+        <!-- tish is foot secetion -->
+
+    <footer class="last-foot">
+      <h1> MY MIssion in <span class="web">2022</span></h1>
+      <p>Hard work,perseverance and Determination for 2022</p>
+      </footer>
 </body>
 </html>
